--- a/myapp/index.html
+++ b/myapp/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  hello world in inside the  folder 
+  hello world in inside the  folder  test 
 </body>
 </html>
