--- a/My Work Space/MyWorkSpace.html
+++ b/My Work Space/MyWorkSpace.html
@@ -42,7 +42,7 @@
                   render() {
                       return (<div className="item">
                           <div className="leftcol">
-                            <a><img src='#'/></a>
+                            <a><img src={this.props.appfeeditem.imgsrc} /></a>
                           </div>
                           <div className="rightcol">
                             <h5 className="shorttitle">{this.props.appfeeditem.title}</h5>
