--- a/My Work Space/MyWorkSpace.html
+++ b/My Work Space/MyWorkSpace.html
@@ -227,9 +227,9 @@ var MyCollaborations = React.createClass({
             });
 
  
-ReactDOM.render(<MyCollaborations />, document.getElementById('mycollaborations'));
+ReactDOM.render(<MyCollaborations />, document.getElementById('mycollaborationsRoot'));
 </script>
-            <div className="row" id="mycollaborations" >
+            <div className="row" id="mycollaborationsRoot" >
                          
                 
               </div>
